Título da página

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
     <head>      
+        <h1>Guacom Company developing of Apps</h1>
     </head>
     <body>
         <h1>Título da página!!</h1>
