Consolidando a modificação do arquivo index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <h1>Título da página!!</h1>
         <h1>Elvis novo milionário cheio de conquistas</h1>
         <h2>Próximo</h2>
+        <h3>Alteração no projeto</h3>
+        <button>Confirmar</button>
     </body>
 
 <html>
